# ALEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  imgui.ini
.github/workflows/: cpp-lint.yml
AL/: CMakeLists.txt  Dependency.cmake
AL-ScriptCore/: CMakeLists.txt
AL-ScriptCore/src/: Example.cs  Input.cs  InternalCalls.cs  KeyCode.cs  Vector2.cs  Vector3.cs  Vector4.cs
AL-ScriptCore/src/Scene/: Component.cs  Entity.cs
AL/include/: AL.h  alpch.h
AL/include/Core/: App.h  Application.h  Assert.h  Base.h  Buffer.h  EntryPoint.h  FileSystem.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  MouseCodes.h  Timestep.h  UUID.h  Window.h
AL/include/Debug/: Instrumentor.h
AL/include/Events/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h
AL/include/ImGui/: ImGuiLayer.h  ImGuiVulkanGlfw.h  ImGuiVulkanRenderer.h
AL/include/Memory/: BlockAllocator.h  StackAllocator.h
AL/include/Physics/: BroadPhase.h  Collision.h  DynamicTree.h  Fixture.h  Island.h  Physics.h  PhysicsAllocator.h  Rigidbody.h  World.h
AL/include/Physics/Contact/: BoxToBoxContact.h  BoxToCapsuleContact.h  BoxToCylinderContact.h  CapsuleToCapsuleContact.h  Contact.h  ContactManager.h  ContactSolver.h  CylinderToCapsuleContact.h  CylinderToCylinderContact.h  SphereToBoxContact.h  SphereToCapsuleContact.h  SphereToCylinderContact.h  SphereToSphereContact.h
AL/include/Physics/Shape/: BoxShape.h  CapsuleShape.h  CylinderShape.h  Shape.h  ShapeCollisions.h  SphereShape.h
AL/include/Platform/: WindowsWindow.h
AL/include/Platform/Vulkan/: ImGuiVulkanRenderer.h
AL/include/Platform/Windows/: WindowsWindow.h
AL/include/Project/: Project.h  ProjectSerializer.h
AL/include/Renderer/: AnimationStateManager.h  Buffer.h  Camera.h  CameraController.h  CommandBuffers.h  Common.h  DescriptorSetLayout.h  EditorCamera.h  FrameBuffers.h  Material.h  Mesh.h  Model.h  OBJLoader.h  Object.h  Pipeline.h  RenderPass.h  Renderer.h  RenderingComponent.h  SAComponent.h  Scene.h  ShaderResourceManager.h  SwapChain.h  SyncObjects.h  Texture.h  VulkanContext.h  VulkanUtil.h
AL/include/Renderer/Animation/: Bones.h  SkeletalAnimation.h  SkeletalAnimations.h  Skeleton.h
AL/include/Scene/: Component.h  CullTree.h  Entity.h  Scene.h  SceneCamera.h  SceneSerializer.h  ScriptableEntity.h
AL/include/Scripting/: ScriptingEngine.h  ScriptingGlue.h
AL/include/UI/: UI.h
AL/include/Utils/: PlatformUtils.h
AL/src/Core/: App.cpp  FileSystem.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Timestep.cpp  UUID.cpp
AL/src/ImGui/: ImGuiLayer.cpp  ImGuiVulkanGlfw.cpp  ImGuiVulkanRenderer.cpp
AL/src/Memory/: BlockAllocator.cpp  StackAllocator.cpp
AL/src/Physics/: BroadPhase.cpp  DynamicTree.cpp  Fixture.cpp  Island.cpp  PhysicsAllocator.cpp  Rigidbody.cpp  World.cpp
AL/src/Physics/Contact/: BoxToBoxContact.cpp  BoxToCapsuleContact.cpp  BoxToCylinderContact.cpp  CapsuleToCapsuleContact.cpp  Contact.cpp  ContactManager.cpp  ContactSolver.cpp  CylinderToCapsuleContact.cpp  CylinderToCylinderContact.cpp  SphereToBoxContact.cpp  SphereToCapsuleContact.cpp  SphereToCylinderContact.cpp  SphereToSphereContact.cpp
AL/src/Physics/Shape/: BoxShape.cpp  CapsuleShape.cpp  CylinderShape.cpp  Shape.cpp  SphereShape.cpp
AL/src/Platform/: WindowsWindow.cpp
AL/src/Platform/Vulkan/: ImGuiVulkanGlfw.cpp  ImGuiVulkanRenderer.cpp  imgui_impl_glfw.cpp
AL/src/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp
AL/src/Project/: Project.cpp  ProjectSerializer.cpp
AL/src/Renderer/: AnimationStateManager.cpp  Buffer.cpp  Camera.cpp  CameraController.cpp  CommandBuffers.cpp  Common.cpp  DescriptorSetLayout.cpp  EditorCamera.cpp  FrameBuffers.cpp  Material.cpp  Mesh.cpp  Model.cpp  OBJLoader.cpp  Object.cpp  Pipeline.cpp  RenderPass.cpp  Renderer.cpp  RenderingComponent.cpp  RenderingComponet.cpp  SAComponent.cpp  Scene.cpp  ShaderResourceManager.cpp  SwapChain.cpp  SyncObjects.cpp  Texture.cpp  VulkanContext.cpp  VulkanUtil.cpp
AL/src/Renderer/Animation/: SkeletalAnimation.cpp  SkeletalAnimations.cpp  Skeleton.cpp
AL/src/Scene/: CullTree.cpp  Entity.cpp  Scene.cpp  SceneCamera.cpp  SceneSerializer.cpp
AL/src/Scripting/: ScriptGlue.cpp  ScriptingEngine.cpp
Sandbox/: CMakeLists.txt
Sandbox/Project/: AfterLife.alproj
Sandbox/Project/Assets/Scenes/: 3DExample.ale  Animation.ale  Physics.ale
Sandbox/Project/Assets/Scripts/: CMakeLists.txt
Sandbox/Project/Assets/Scripts/src/: Camera.cs  Player.cs
Sandbox/assets/: defaultSkybox.hdr
Sandbox/src/: EditorLayer.cpp  EditorLayer.h  SandboxApp.cpp
Sandbox/src/Panel/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
docs/: Animator.md  GameEngine.md  PhysicsEngine.md  Renderer.md  Subject.md
makefiles/: Makefile.mingw  Makefile.msvc
models/Mannequin.gltf/: Mannequin.gltf
models/jug_01_4k.gltf/: jug_01_4k.gltf
models/potted_plant_04_4k.gltf/: potted_plant_04_4k.gltf
projects/: AfterLife.alproj
projects/template/: AfterLife.alproj.in
shaders/: GeometryPass.frag  GeometryPass.vert  GeometryPassWithSA.vert  LightingPass.frag  LightingPass.vert  ShadowCubeMap.vert  ShadowMap.vert  background.frag  background.vert  gamma.frag  gamma.vert  shader.frag  shader.vert  sphericalMap.frag  sphericalMap.vert
spvs/: GeometryPass.frag.spv  GeometryPass.vert.spv  GeometryPassWithSA.vert.spv  LightingPass.frag.spv  ShadowCubeMap.vert.spv  ShadowMap.vert.spv  background.frag.spv  background.vert.spv  gamma.frag.spv  gamma.vert.spv  shader.frag.spv  shader.vert.spv  sphericalMap.frag.spv  sphericalMap.vert.spv
